# Flashcards

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_sample.py
app/: main.py  test_main.py
app/core/: config.py
app/core/security/: auth_handler.py  dependencies.py  hash_helper.py
app/db/: database.py  init_db.py
app/db/models/: deck.py  flashcard.py  user.py
app/db/schemas/: deck.py  flashcard.py  user.py
app/db/utils/: init_db.py
app/repository/: deck.py  flashcard.py  user.py
app/routers/: auth.py  deck.py  flashcard.py  user.py
app/schemas/: auth.py  deck.py
app/service/: auth.py  deck.py  flashcard.py  user.py
frontend/: dashboard.html  index.html  login.js
frontend/css/: style.css
frontend/js/: dashboard.js  login.js  logout.js
migrations/: env.py
migrations/versions/: 1afe3bf43a27_initial_migration.py
tests/: conftest.py  test_auth.py  test_deck.py  test_flashcard.py  test_main.py
